--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <name>${project.artifactId}</name>
     <dependencies>
         <dependency>
-            <groupId>org.ubimix.scrapper</groupId>
-            <artifactId>org.ubimix.scrapper.app</artifactId>
+            <groupId>org.ubimix.scraper</groupId>
+            <artifactId>org.ubimix.scraper.app</artifactId>
             <version>1.2.1</version>
         </dependency>
         <dependency>
