--- a/pom.xml
+++ b/pom.xml
@@ -15,80 +15,14 @@
     <dependencies>
         <dependency>
             <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.adapters</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.events</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.xml</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.json</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.rpc</artifactId>
-            <version>1.2.1</version>
+            <artifactId>org.ubimix.commons.model</artifactId>
+            <version>0.1.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.ubimix.commons</groupId>
             <artifactId>org.ubimix.commons.uri</artifactId>
             <version>1.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.iterator</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.utils</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.strings</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.ubimix.commons</groupId>
-            <artifactId>org.ubimix.commons.osgi</artifactId>
-            <version>1.2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi_R4_core</artifactId>
-            <version>1.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi_R4_compendium</artifactId>
-            <version>1.0</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
